--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.10",
+    "expo": "~52.0.11",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "^4.0.8",
+    "expo-router": "^4.0.9",
     "expo-status-bar": "~2.0.0",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.3",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
