--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "expo": "~52.0.11",
+    "expo-app-loading": "^2.1.1",
     "expo-constants": "~17.0.3",
+    "expo-font": "^13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.9",
     "expo-status-bar": "~2.0.0",
