--- a/app.json
+++ b/app.json
@@ -25,9 +25,9 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
-
     "scheme": "your-app-scheme"
   }
 }
