--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "expo": "~52.0.11",
-    "expo-app-loading": "^2.1.1",
     "expo-constants": "~17.0.3",
-    "expo-font": "^13.0.1",
+    "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.9",
     "expo-status-bar": "~2.0.0",
-    "lottie-react-native": "^7.1.0",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "^0.76.3",
     "react-native-paper": "^5.12.5",
