--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.11",
+    "expo": "~52.0.14",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "^4.0.9",
+    "expo-router": "~4.0.11",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
