--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.14",
+    "@react-native-picker/picker": "2.9.0",
+    "expo": "~52.0.17",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
