--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
+    "check": "^1.0.0",
     "expo": "~52.0.17",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -22,8 +24,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-vector-icons": "^10.2.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
