--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "check": "^1.0.0",
-    "expo": "~52.0.17",
+    "expo": "~52.0.25",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
-    "expo-status-bar": "~2.0.0",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.16",
+    "expo-status-bar": "~2.0.1",
     "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "^0.76.3",
+    "react-native": "0.76.6",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
