--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-picker/picker": "2.9.0",
     "check": "^1.0.0",
     "expo": "~52.0.25",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.4",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
@@ -24,7 +24,10 @@
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-notifications": "~0.29.12",
+    "expo-device": "~7.0.2",
+    "expo-dev-client": "~5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
