--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
     "@react-native-picker/picker": "2.9.0",
     "check": "^1.0.0",
     "expo": "~52.0.25",
+    "expo-background-fetch": "~13.0.4",
     "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.9",
+    "expo-device": "~7.0.2",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.4",
+    "expo-notifications": "~0.29.12",
     "expo-router": "~4.0.16",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.4",
     "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-notifications": "~0.29.12",
-    "expo-device": "~7.0.2",
-    "expo-dev-client": "~5.0.9"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
